Update registration_number.css, registration_number_dom.js - fixed bug for empty registration display not showing after clear button is pressed

--- a/css/registration_number.css
+++ b/css/registration_number.css
@@ -99,6 +99,8 @@ body {
 #empty-container {
 	font-size: 1.5em;
 
+	text-align: center;
+
 	margin: 20px;
 }
 
